feat: index detailed info
